Update Pipfile to add FastAPI

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ seaborn = "*"
 hyperopt = "*"
 mlflow = "*"
 apache-airflow = "*"
+fastapi = {extras = ["standard"], version = "*"}
 
 [dev-packages]
 ipykernel = "*"
