--- a/src/web_service/fastapi/Pipfile
+++ b/src/web_service/fastapi/Pipfile
@@ -8,6 +8,7 @@ pandas = "*"
 scikit-learn = "*"
 mlflow = "*"
 fastapi = {extras = ["standard"], version = "*"}
+python-logstash = "*"
 
 [dev-packages]
 ipykernel = "*"
