Fix typo in logstash.conf

--- a/src/monitoring/logstash/pipeline/logstash.conf
+++ b/src/monitoring/logstash/pipeline/logstash.conf
@@ -9,6 +9,15 @@ input {
 }
 
 ## Add your filters / logstash plugins configuration here
+filter {
+	json {
+		source => "message"
+	}
+	json_encode {
+		source => "context"
+		target => "context"
+	}
+}
 
 output {
 	elasticsearch {
