Update Feature class to avoid error 500 with big numbers

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ mlflow = "*"
 apache-airflow = "*"
 fastapi = {extras = ["standard"], version = "*"}
 mlops-student-performance = {file = ".", editable = true}
+pytest = "*"
 
 [dev-packages]
 ipykernel = "*"
