--- a/src/web_service/fastapi/Pipfile
+++ b/src/web_service/fastapi/Pipfile
@@ -9,6 +9,8 @@ scikit-learn = "*"
 mlflow = "*"
 fastapi = {extras = ["standard"], version = "*"}
 python-logstash = "*"
+asyncio = "*"
+pytest-asyncio = "*"
 
 [dev-packages]
 ipykernel = "*"
