Update ci-cd.yml file to run tests of the API

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,27 +3,14 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
+      - main  # Trigger the workflow on pushes to the main branch
   pull_request:
     branches:
-      - main
+      - main  # Trigger on PRs to the main branch
 
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
-
-    services:
-      db:
-        image: postgres:latest
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: studentdb
-        options: >-
-          --health-cmd "pg_isready -U user" --health-interval 10s
-          --health-timeout 5s --health-retries 5
 
     steps:
       - name: Checkout code
@@ -40,17 +27,16 @@ jobs:
           pip install pipenv
           pipenv install --dev
 
-      # Run tests for FastAPI
-      - name: Run FastAPI tests
+      # Run FastAPI unit and integration tests
+      - name: Run FastAPI unit tests
         run: |
           cd src/web_service/fastapi
-          pipenv run pytest test.py
+          pipenv run pytest tests/unit
 
-      # Run tests for Streamlit
-      - name: Run Streamlit tests
+      - name: Run FastAPI integration tests
         run: |
-          cd ../streamlit
-          pipenv run pytest app.py
+          cd src/web_service/fastapi
+          pipenv run pytest tests/integration
 
       # Build Docker images for FastAPI and Streamlit
       - name: Build FastAPI Docker image
