Update ci-cd.yml file to allow manual execution

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,7 +6,10 @@ on:
       - develop
   pull_request:
     branches:
-      - develop
+      - main
+  
+  workflow_dispatch:
+    
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
