Update ci-cd.yml file to run only unit tests

--- a/src/web_service/fastapi/Pipfile
+++ b/src/web_service/fastapi/Pipfile
@@ -11,6 +11,7 @@ fastapi = {extras = ["standard"], version = "*"}
 python-logstash = "*"
 asyncio = "*"
 pytest-asyncio = "*"
+pytest = "*"
 
 [dev-packages]
 ipykernel = "*"
