--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Workflow
 
 on:
   push:
@@ -7,65 +7,42 @@ on:
   pull_request:
     branches:
       - main
-  
-  workflow_dispatch:
-    
+  workflow_dispatch:  # Allows manual triggering of the workflow
+
 jobs:
-  build_and_test:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      # Set up Python and install dependencies
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-      - name: Install dependencies with Pipenv
-        run: |
-          pip install pipenv
-          pipenv install --dev
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
 
-      # Run FastAPI unit and integration tests
-      - name: Run FastAPI unit tests
-        run: |
-          cd src/web_service/fastapi
-          pipenv run pytest tests/unit
+    - name: Install Pipenv
+      run: pip install pipenv
 
-      - name: Run FastAPI integration tests
-        run: |
-          cd src/web_service/fastapi
-          pipenv run pytest tests/integration
+    - name: Install dependencies
+      run: pipenv install
 
-      # Build Docker images for FastAPI and Streamlit
-      - name: Build FastAPI Docker image
-        run: |
-          cd src/web_service/fastapi
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/fastapi:latest .
+    - name: Start Docker services
+      run: |
+        docker-compose -f mlflow.docker-compose.yml up -d
+        docker-compose -f src/web_service/web-service.docker-compose.yml up -d
 
-      - name: Build Streamlit Docker image
-        run: |
-          cd ../streamlit
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/streamlit:latest .
+    - name: Wait for services to be ready
+      run: sleep 30  # Adjust as necessary for services to fully start
 
-      # Log in to Docker Hub
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+    - name: Run FastAPI unit tests
+      run: pipenv run pytest src/web_service/fastapi/tests/unit
 
-      # Push Docker images to Docker Hub
-      - name: Push FastAPI Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/fastapi:latest
-
-      - name: Push Streamlit Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/streamlit:latest
-
-      # Optional: Bring up the services with Docker Compose (testing or deployment environment)
-      - name: Deploy services with Docker Compose (Optional)
-        run: |
-          docker-compose -f mlflow.docker-compose.yml up -d
-          docker-compose -f src/airflow/airflow.docker-compose.yaml up -d
-          docker-compose -f src/monitoring/elk.docker-compose.yml up -d
-          docker-compose -f src/web_service/web-service.docker-compose.yml up -d
+    - name: Stop Docker services
+      run: |
+        docker-compose -f mlflow.docker-compose.yml down
+        docker-compose -f src/web_service/web-service.docker-compose.yml down
