--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,6 +29,9 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y docker-compose  # Install Docker Compose
+    
+    - name: Create shared network
+      run: docker network create shared_network
 
     - name: Install Pipenv
       run: pip install pipenv
