Update ci-cd.yml file to activate the environment with pipenv

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,6 +37,7 @@ jobs:
       run: |
         pip install pipenv
         pipenv install
+        pipenv shell
 
     - name: Start Docker services
       run: |
