--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,8 +40,10 @@ jobs:
       run: docker-compose --env-file mlflow.env -f mlflow.docker-compose.yml up -d --build
     
     - name: Start Airflow service
-      run: docker-compose -f src/airflow/airflow.docker-compose.yaml up -d --build
-        docker-compose --env-file mlflow.env -f mlflow.docker-compose.yml up -d --build
+      working-directory: src/airflow
+      run: |
+        echo -e "AIRFLOW_UID=$(id -u)" > .env
+        docker-compose -f airflow.docker-compose.yaml up -d --build
 
     # Trigger Airflow DAG without parameters
     - name: Trigger Airflow DAG
@@ -56,7 +58,7 @@ jobs:
       run: docker-compose -f src/web_service/web-service.docker-compose.yml up -d --build
          
     - name: Wait for services to be ready
-      run: sleep 120  # Adjust as necessary for services to fully start
+      run: sleep 60  # Adjust as necessary for services to fully start
 
     - name: Install dependencies from Pipfile
       working-directory: src/web_service/fastapi
