Update ci-cd.yml file to add more time for airflow to be ready

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,6 +45,9 @@ jobs:
         echo -e "AIRFLOW_UID=$(id -u)" > .env
         docker-compose -f airflow.docker-compose.yaml up -d --build
 
+    - name: Wait for Airflow to be ready
+      run: sleep 180  # Adjust as necessary for services to fully start
+  
     # Trigger Airflow DAG without parameters
     - name: Trigger Airflow DAG
       run: |
