Update the file ci-cd.yml to add more time to let airflow to be ready

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,7 +45,10 @@ jobs:
         echo -e "AIRFLOW_UID=$(id -u)" > .env
         docker-compose -f airflow.docker-compose.yaml up airflow-init
         docker-compose -f airflow.docker-compose.yaml up -d --build
-        
+
+    - name: Wait for Airflow to be ready
+      run: sleep 30
+  
     # Trigger Airflow DAG without parameters
     - name: Trigger Airflow DAG
       run: |
