Update ci-cd.yml to fix typo when running tests

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -111,7 +111,7 @@ jobs:
 
     - name: Run request test
       working-directory: src/web_service/fastapi
-      run: pipenv run test.py
+      run: pipenv run pytest test.py
 
     - name: Run FastAPI unit tests
       working-directory: src/web_service/fastapi
